# MicroChatRouting

./: README.md
Client/: CMakeLists.txt  widget.cpp
Client/model/: data.h
code/client/: file_service_client.hpp  message_service_client.hpp  transmite_service_client.hpp  user_service_client.hpp
code/es/: es_data.hpp  es_message.hpp
code/file/: CMakeLists.txt  file_server.cc  file_server.hpp  test.cc
code/friend/: CMakeLists.txt
code/gateway/: CMakeLists.txt  connection.hpp  gateway_server.cc  gateway_server.hpp  main.cc  service.h
code/interface/: base.proto  file.proto  friend.proto  gateway.proto  getway.proto  message.proto  notify.proto  speech.proto  transmite.proto  user.proto
code/message/: CMakeLists.txt  message_server.cc  message_server.hpp
code/message_transmit/: CMakeLists.txt  transmite_server.cc  transmite_server.hpp
code/mysql/: mysql_chat_session.hpp  mysql_friendapply.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp
code/odb/: chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message.hxx  relation.hxx
code/speech/: CMakeLists.txt  speech_server.hpp
code/user/: CMakeLists.txt  user_server.cc  user_server.hpp
code/util/: asr.hpp  channel.hpp  dms.hpp  dms.py  es_data.hpp  etcd.hpp  file.hpp  icsearch.hpp  log.hpp  mysql_chat_session_member.hpp  mysql_user.hpp  odb.hpp  rabbitmq.hpp  redis_data.hpp  uuid.hpp
code/util/aipcpp/base/: utils.h
code/util/es/: test  test.cpp
code/util/json/: json.hpp
code/util/reg_dis/: channel.hpp  etcd.hpp
